@@ -105,15 +105,13 @@ sub new {
 					push(@{$self->{'existing_rli_files'}},$file);
 				} elsif ($rli->{'status'} == 1) {
 					#print Data::Dumper->Dump([$rli],[qw(*rli)]);
-
 					my @stuff = split(/\//, $file);
 					my $time = "@stuff";
 					$time--;
-					print "Testing $comics_dir/$rli->{'subdir'}/$stuff[1]\n";
 					if (-f "$comics_dir/$rli->{'subdir'}/$stuff[1]") {
-						print "Bad stuff!\n";
+						my @list_of_files = @{$rli->{'file'}};
 						my @temporary_file_rebuild_array;
-						foreach (@{$rli->{'file'}}) {
+						foreach (@list_of_files) {
 							print "Getting element of rli: $_\n";
 							my @stuff = split(/\//, $_);
 							my $time = "@stuff";
@@ -121,10 +119,8 @@ sub new {
 							$_ = "$stuff[1]";
 							push(@temporary_file_rebuild_array, $_)
 						}
-						$_ = shift(@temporary_file_rebuild_array);
-						$rli->{'file'} = undef;
-						push(@{$rli->{'file'}}, $_);
-						print Data::Dumper->Dump([$rli],[qw(*rli)]);
+						$rli->{'file'} = "@temporary_file_rebuild_array";
+						#print Data::Dumper->Dump([$rli],[qw(*rli)]);
 						next;
 					}
 					print STDERR "Warning: $file is missing in $comics_dir\n"
